--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 <body>
 <h1>Milos starter</h1>
 
-	<script id="template" type="x-tmpl-mustache">
+	<script id="users-template" type="x-tmpl-mustache">
 		
 		<ul class="cards">
 		{{#users}}
@@ -31,7 +31,7 @@
 
 	</script>
 
-<div id="target"></div>
+<div id="users"></div>
 
 </body>
 <script type="text/javascript" src="../dist/scripts.min.js"></script>
